--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     ],
     "require": {
         "php": "^7.2.0",
+        "illuminate/database": "5.8.*",
         "illuminate/support": "5.8.*"
     },
     "autoload": {
