--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,18 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "mockery/mockery": "^1.4",
+        "orchestra/testbench": "^6.15",
         "phpunit/phpunit": "^8.5.8"
     },
     "autoload": {
         "psr-4": {
             "Sepiphy\\Laravel\\Acl\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "classmap": [
+            "./migrations/"
+        ]
     },
     "extra": {
         "branch-alias": {
