--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0",
+        "php": ">=7.4",
         "illuminate/database": "^5.8 | ^6.20.14 | ^7.30.3 | ^8.22.1",
         "illuminate/support": "^5.8 | ^6.20.14 | ^7.30.3 | ^8.22.1"
     },
@@ -26,7 +26,9 @@
         "friendsofphp/php-cs-fixer": "^2.18",
         "mockery/mockery": "^1.4",
         "orchestra/testbench": "^6.15",
-        "phpunit/phpunit": "^8.5.8"
+        "phpstan/phpstan": "^0.12.82",
+        "phpunit/phpunit": "^8.5.8",
+        "sepiphy/php-codesniffer": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -36,6 +38,19 @@
     "autoload-dev": {
         "classmap": [
             "./migrations/"
+        ]
+    },
+    "scripts": {
+        "fix": [
+            "php-cs-fixer fix --ansi",
+            "sphpcbf src tests --standard=Laravel --colors"
+        ],
+        "lint": [
+            "sphpcs src tests --standard=Laravel --colors",
+            "phpstan analyse src tests --no-progress --ansi"
+        ],
+        "test": [
+            "phpunit --colors=always"
         ]
     },
     "extra": {
