--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,7 +1,7 @@
 <?php
 
 $header = <<<EOF
-This file is part of the Seriquynh package.
+This file is part of the Sepiphy package.
 (c) Quynh Xuan Nguyen <seriquynh@gmail.com>
 For the full copyright and license information, please view the LICENSE
 file that was distributed with this source code.
