--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     ],
     "require": {
         "php": ">=7.4",
-        "illuminate/database": "^5.8 | ^6.20.14 | ^7.30.3 | ^8.22.1",
-        "illuminate/support": "^5.8 | ^6.20.14 | ^7.30.3 | ^8.22.1"
+        "illuminate/database": "^6.0 | ^7.0 | ^8.0",
+        "illuminate/support": "^6.0 | ^7.0 | ^8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.18",
